--- a/fig.yml
+++ b/fig.yml
@@ -4,6 +4,8 @@ mysql:
     - ./db:/var/lib/mysql
   environment:
     MYSQL_ROOT_PASSWORD: password
+  ports:
+    - 3306:3306
 
 sqlalchemy:
   build: .
